--- a/exercicios/ex026/mq002/css/retrato.css
+++ b/exercicios/ex026/mq002/css/retrato.css
@@ -1,2 +1,7 @@
 @charset "UTF-8";
-/* aparelho em pé */
+/* aparelho em deitado (portrait) */
+
+body {
+    background: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
