--- a/exercicios/ex026/mq004/estilo/media-queries.css
+++ b/exercicios/ex026/mq004/estilo/media-queries.css
@@ -2,6 +2,84 @@
 
 /* Todas as demais mídias */
 
+/* Typical Devace Breakpoints 
+---------------------------------------------------------------------------------------------------
+os msm sempre estão sendo atualizados por isso é importante estar sempre se atualizando das medidas
+---------------------------------------------------------------------------------------------------
+
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/
+
 @media print {
-    
+    /* IMPRESSÃO */
+
+    * { 
+        font-family:'Courier New', Courier, monospace;
+    }
+
+    main {
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'essa impressão foi feita com a finalidade de exercitar os conhecimento adquiridos no curso de html e css do Guanabara ';
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    #phone { display: none;}
+    #tablet { display: none;}
+    #print { display: block;}
+    #pc { display: none;}
+    #tv { display: none;}
 }
+
+@media screen and (min-width: 768px) and (max-width: 992px) { 
+
+    /* TABLET */
+
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    #phone { display: none;}
+    #tablet { display: block;}
+    #print { display: none;}
+    #pc { display: none;}
+    #tv { display: none;}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    /* DESKTOP */
+
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    #phone { display: none;}
+    #tablet { display: none;}
+    #print { display: none;}
+    #pc { display: block;}
+    #tv { display: none;}
+}
+
+@media screen and (min-width:1200px) {
+    /* GRANDES TELAS */
+   
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    
+    #phone { display: none;}
+    #tablet { display: none;}
+    #print { display: none;}
+    #pc { display: none;}
+    #tv { display: block;}
+    }
