--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -19,8 +19,15 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+#ico {
+    background-color: rgb(48, 48, 48);
+    text-align: center;
     display: block;
+    padding: 10px;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
